Actualizado datos para app 060625